Mon Oct  2 11:12:05 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in (V5_MAKE_SHARED_LIB): Change rule to install
		version 0.1 of the library. Pass the libcrypto version
		number to Makefile

	* Makefile.in (CRYPTO_VER): Get the proper libcrypto version number

Mon Sep 25 16:54:34 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in: Removed "foo:: foo-$(WHAT)" lines from the
		Makefile. 

Wed Sep 06 14:20:57 1995   Chris Provenzano (proven@mit.edu)

        * DNR.c : s/keytype/enctype/g, s/KEYTYPE/ENCTYPE/g

Mon Aug  7 18:40:34 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (SRCS): Include $(NETIO_SRCS) in the list of source
		files, instead of $(NETIO_OBJS)

	* tf_util.c (utimes): If __SVR4 is defined, #include <utime.h>,
		just as we do if __svr4__ is defined.

	* g_pw_in_tkt.c: If __SVR4 is defined, #include <sgtty.h>, just as
		we do if __svr4__ is defined.  (WARNING: This code still
		assumes that the BSD ioctl's are being supported, at least
		in compatibility mode.  We should really upgrade this code
		to use POSIX termios calls.)

Tue Jun 27 23:59:28 1995  Mark Eichin  <eichin@cygnus.com>

	* rd_req.c (krb_rd_req): from_addr is an address, so use unsigned
	KRB4_32 instead of long.

Tue Jun 27 23:50:08 1995  Mark Eichin  <eichin@cygnus.com>

	* rd_safe.c (krb_rd_safe): use KRB4_32 for address comparison
	and checksum swapping.

Tue Jun 27 15:49:35 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kparse.c - Change LineNbr to sLineNbr to avoid conflict with kparse.h

Mon Jun 26 14:58:02 1995  Sam Hartman  <hartmans@tardis.MIT.EDU>

	* log.c: Use HAVE_TIME_H not NEED_TIME_H

	* klog.c: Change NEED_TIME_H to HAVE_TIME_H

	* configure.in: Check for sys/select.h.  Also check for time.h.

	* send_to_kdc.c: If sys/select.h exists, include it.

Fri Jun 23 18:15:07 1995  Tom Yu  (tlyu@dragons-lair)

	* configure.in: fix Sam's typo so libkrb4.a gets symlinked
		properly

Fri Jun 23 12:29:39 1995  Sam Hartman  <hartmans@tardis.MIT.EDU>
